# pproject

./: README.md  pyproject.toml
.github/workflows/: packaging.yml
src/imppkg/: harmonic_mean.c  harmonic_mean.pyx  harmony.py
test/: test_harmonic_mean.py  test_harmonic_mean.py~
